# tenda

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  WORKFLOW.md  test.tnd
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  exploration.md  feature-request.md  question.md  task-template.md  task.md
.github/workflows/: ci.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs  report.rs  source.rs  span.rs
crates/common/: Cargo.toml
crates/common/src/: source.rs  span.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs  loader.rs  loader_error.rs
crates/os-platform/: Cargo.toml
crates/os-platform/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  closures.rs  parser.rs  parser_error.rs  scope_tracker.rs  token_iter.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: lib.rs
crates/reporting/: Cargo.toml
crates/reporting-derive/: Cargo.toml
crates/reporting-derive/src/: lib.rs
crates/reporting/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: date.rs  environment.rs  frame.rs  function.rs  lib.rs  runtime.rs  runtime_error.rs  stack.rs  store.rs  value.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: scanner.rs  scanner_error.rs  source_iter.rs  token.rs
crates/tenda/: Cargo.toml
crates/tenda-playground/: Cargo.toml
crates/tenda-playground-platform/: Cargo.toml
crates/tenda-playground/src/: main.rs  protocol_message.rs
crates/tenda-web/: Cargo.toml
crates/tenda-web/src/: main.rs  protocol_message.rs
crates/tenda/src/: main.rs  platform.rs
crates/web-platform/: Cargo.toml
crates/web-platform/src/: lib.rs
docs/internal/: README.md
docs/internal/architecture/: overview.md
docs/internal/get-started/: learning-rust.md
docs/internal/planning/: decisions.md  inspirations.md  objectives.md  roadmap.md
docs/internal/processes/: development-workflow.md
docs/internal/style/: code-style.md  testing-guidelines.md
interpreter/: Cargo.toml
interpreter/src/: associative_array.rs  builtins.rs  date.rs  environment.rs  function.rs  interpreter.rs  lib.rs  platform.rs  runtime_error.rs  stack.rs  tests.rs  value.rs
macros/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs  platform.rs  runtime.rs  tenda.rs
parser/: Cargo.toml
parser/src/: ast.rs  closures.rs  lib.rs  parser.rs  parser_error.rs  scope_tracker.rs  stmt.rs  tests.rs  token_iter.rs
runtime/: Cargo.toml
runtime/src/: builtins.rs  function.rs  runtime.rs  runtime_error.rs  stack.rs  value.rs
scanner/: Cargo.toml
scanner/src/: lib.rs  scanner.rs  scanner_error.rs  source_iter.rs  tests.rs  token.rs
scripts/: install.ps1  install.sh
src/: ast.rs  environment.rs  function.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs  stmt.rs  token.rs  value.rs
src/interpreter/: environment.rs  function.rs  mod.rs  runtime_error.rs  tests.rs  value.rs
src/parser/: mod.rs  parser_error.rs  scope_tracker.rs  stmt.rs  tests.rs
src/scanner/: mod.rs  tests.rs  token.rs
tenda/: Cargo.toml
tenda-core/: Cargo.toml
tenda-core/src/: lib.rs
tenda/src/: main.rs
tests/: Cargo.toml
tests/src/: bin_ops.rs  core.rs  lib.rs  ops.rs  syntax.rs
