[workspace]
members = [
    "crates/runtime",
    "crates/parser",
    "crates/scanner",
    "crates/common",
    "crates/reporting",
    "crates/reporting-derive",
    "crates/os-platform",
    "crates/core",
    "crates/tenda",
    "crates/prelude",
    "tests",
]
resolver = "2"

[workspace.dependencies]
peekmore = "1.3.0"
thiserror = "1.0"
chrono = "0.4.40"
indexmap = "1.7.0"
