[workspace]
members = ["crates/*", "tests"]
resolver = "2"

[workspace.dependencies]
peekmore = "1.3.0"
thiserror = "1.0"
chrono = "0.4.40"
indexmap = "1.7.0"

[workspace.package]
version = "0.1.0"
authors = ["Gabriel Bruno Oliveira Pereira <gabrielbrunoes@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Tenda - a programming language for Portuguese speakers"
repository = "https://github.com/gabrielbrunop/tenda"
readme = "README.en.md"
keywords = ["language", "interpreter", "cli"]
categories = ["command-line-utilities", "parsing", "compilers"]
