[workspace]
members = ["crates/*", "tests"]
resolver = "2"

[workspace.dependencies]
tenda-reporting = { path = "crates/reporting", version = "0.1.0" }
tenda-reporting-derive = { path = "crates/reporting-derive", version = "0.1.0" }
tenda-core = { path = "crates/core", version = "0.1.0" }
tenda-common = { path = "crates/common", version = "0.1.0" }
tenda-parser = { path = "crates/parser", version = "0.1.0" }
tenda-scanner = { path = "crates/scanner", version = "0.1.0" }
tenda-runtime = { path = "crates/runtime", version = "0.1.0" }
tenda-prelude = { path = "crates/prelude", version = "0.1.0" }
tenda-os-platform = { path = "crates/os-platform", version = "0.1.0" }

peekmore = "1.3.0"
thiserror = "1.0"
chrono = "0.4.40"
indexmap = "1.7.0"

[workspace.package]
version = "0.1.0"
authors = ["Gabriel Bruno Oliveira Pereira <gabrielbrunoes@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Tenda - a programming language for Portuguese speakers"
repository = "https://github.com/gabrielbrunop/tenda"
readme = "README.en.md"
keywords = ["language", "interpreter", "cli"]
categories = ["command-line-utilities", "parsing", "compilers"]
