[package]
name = "tenda-common"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities for the Tenda programming language"
edition = "2021"

[dependencies]
tenda-reporting = { workspace = true }
thiserror = { workspace = true }
