[package]
name = "tenda-core"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
tenda-runtime = { path = "../runtime" }
tenda-parser = { path = "../parser" }
tenda-scanner = { path = "../scanner" }
tenda-common = { path = "../common" }
tenda-reporting = { path = "../reporting" }
tenda-prelude = { path = "../prelude" }
tenda-os-platform = { path = "../os-platform" }
tenda-web-platform = { path = "../web-platform" }
