[package]
name = "tenda-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionalities for the Tenda programming language"
edition = "2021"

[dependencies]
tenda-runtime = { workspace = true }
tenda-parser = { workspace = true }
tenda-scanner = { workspace = true }
tenda-common = { workspace = true }
tenda-reporting = { workspace = true }
tenda-prelude = { workspace = true }
tenda-os-platform = { workspace = true }
