[package]
name = "tenda-loader"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Module loader for the Tenda programming language"
edition = "2021"

[dependencies]
tenda-parser = { workspace = true }
tenda-common = { workspace = true }
tenda-scanner = { workspace = true }
thiserror = { workspace = true }
tenda-reporting = { workspace = true }
tenda-reporting-derive = { workspace = true }
indexmap = { workspace = true }
petgraph = "0.8.2"
