[package]
name = "tenda-parser"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
tenda-scanner = { path = "../scanner" }
tenda-common = { path = "../common" }
tenda-reporting = { path = "../reporting" }
tenda-reporting-derive = { path = "../reporting-derive" }
thiserror = { workspace = true }
peekmore = { workspace = true }
