[package]
name = "tenda-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser for the Tenda programming language"
edition = "2021"

[dependencies]
tenda-scanner = { workspace = true }
tenda-common = { workspace = true }
tenda-reporting = { workspace = true }
tenda-reporting-derive = { workspace = true }
thiserror = { workspace = true }
peekmore = { workspace = true }
