[package]
name = "tenda-reporting-derive"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Tenda reporting utilities"
edition = "2021"

[dependencies]
tenda-common = { workspace = true }
tenda-reporting = { workspace = true }
thiserror = { workspace = true }

[dependencies.syn]
version = "2.0"
features = ["derive", "parsing"]

[dependencies.quote]
version = "1.0"

[dependencies.proc-macro2]
version = "1.0"

[lib]
proc-macro = true
