[package]
name = "tenda-runtime"
version.workspace = true
authors.workspace = true
edition = "2021"

[dependencies]
tenda-parser = { path = "../parser" }
tenda-scanner = { path = "../scanner" }
tenda-common = { path = "../common" }
tenda-reporting = { path = "../reporting" }
tenda-reporting-derive = { path = "../reporting-derive" }
thiserror = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
chrono-tz = "0.10.1"
