[package]
name = "tenda-runtime"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
tenda-parser = { workspace = true }
tenda-scanner = { workspace = true }
tenda-common = { workspace = true }
tenda-reporting = { workspace = true }
tenda-reporting-derive = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
chrono-tz = "0.10.1"
