[package]
name = "tenda-scanner"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Scanner for the Tenda programming language"
edition = "2021"

[dependencies]
tenda-common = { workspace = true }
tenda-reporting-derive = { workspace = true }
tenda-reporting = { workspace = true }
thiserror = { workspace = true }
