[package]
name = "tenda-playground"
version = "0.0.0"  
authors.workspace = true
publish = false
edition = "2021"

[dependencies]
tenda-core = { path = "../core" }
tenda-playground-platform = { path = "../tenda-playground-platform" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
