[package]
name = "tenda"
version.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"
default-run = "tenda"

[dependencies]
tenda-core = { workspace = true }
reedline = "0.39.0"
yansi = "1.0"
clap = { version = "4.5", features = ["derive"] }
